<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">岩手弁辞典＼(^o^)／</string>
    
    <string name="Text1">岩手弁辞典</string>
    <string name="ki">挨拶</string>
    <string name="dow">動詞</string>
    <string name="ai">感情</string>
  <!--   <string name="raku">楽</string> -->
    <string name="finish">終了</string>
    
<!--     <string name="Text2">表示されたかな？？</string>
 -->
    
</resources>
