<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    >
    
    <TextView android:text="@string/Text1" 
		  android:id="@+id/appNameTextView" 
		  android:layout_width="wrap_content" 
		  android:layout_height="wrap_content"
		  android:textSize="45sp"
		  android:layout_gravity="center_horizontal"
		  android:gravity="center"
		  android:textColor="#ff6633">
		  </TextView>
		  
<Button android:text="@string/ki" 
        android:id="@+id/ki_Button" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        </Button>
        
<Button android:text="@string/dow" 
		android:id="@+id/do_Button" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal">
		</Button>
		
<Button android:text="@string/ai" 
		android:id="@+id/ai_Button" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal">
		</Button>
		
<!-- <Button android:text="@string/raku" 
		android:id="@+id/raku_Button" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal">
		</Button> -->
		
<Button android:text="@string/finish" 
		android:id="@+id/finish_Button" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal">
		</Button>
		
</LinearLayout>
